Town6: Fixes wrapping dates in event cards
Use abbreviations for weekdays.

Link: SEA-244
Type: Improvement

--- a/src/onegov/town6/theme/styles/events.scss
+++ b/src/onegov/town6/theme/styles/events.scss
@@ -45,6 +45,7 @@ $event-image-max-height: 150px;
 
         a {
             font-weight: bold;
+            white-space: nowrap;
             i { width: $events-icon-width; }
         }
     }
